syntax = "proto3";

option csharp_namespace = "Kocer.Grpc.Server";

message ExampleRequest {
	int32 pageIndex = 1;
	int32 pageSize = 2;
	bool isDescending = 3;
	string pageData = 4;

}

message ExampleResponse {
	int32 pageIndex = 1;
  string pageData = 2;
}


service ExampleService {
  // Unary
  rpc UnaryCall (ExampleRequest) returns (ExampleResponse);

  // Server streaming
  rpc StreamingFromServer (ExampleRequest) returns (stream ExampleResponse);

  // Client streaming
  rpc StreamingFromClient (stream ExampleRequest) returns (ExampleResponse);

  // Bi-directional streaming
  rpc StreamingBothWays (stream ExampleRequest) returns (stream ExampleResponse);
}